--- a/VehicleManagementSystem/VehicleManagementSystem.csproj
+++ b/VehicleManagementSystem/VehicleManagementSystem.csproj
@@ -201,6 +201,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Class1.cs" />
+    <Compile Include="Models\Vehicles2.cs" />
     <Compile Include="Models\Component.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
