--- a/VehicleManagementSystem/Web.config
+++ b/VehicleManagementSystem/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-VehicleManagementSystem-20220511033816.mdf;Initial Catalog=aspnet-VehicleManagementSystem-20220511033816;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="VehicleMSysEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=VehicleMSys;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="VehicleMSysEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=VehicleMSys;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="AccountsEntities" connectionString="metadata=res://*/Models.accounts.csdl|res://*/Models.accounts.ssdl|res://*/Models.accounts.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=VehicleMSys;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
